--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -1,12 +1,7 @@
-%h1
-  Deltacloud API #{settings.version}
+=header "Deltacloud API #{settings.version}", :back => 'false'
+=subheader "#{driver_symbol}@#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}"
 
-%ul
-  - @collections.sort_by { |k| k.to_s }.each do |key|
-    %li
-      = link_to key.to_s.gsub('_', ' ').titlecase, api_url_for(key)
-      %dl
-        - collections[key].operations.each_key do |op|
-          - next if [:index, :show].include?(op)
-          %dt
-            = op
+%div{ :'data-role' => :content, :'data-theme' => 'c'}
+  %ul{ :'data-role' => :listview, :'data-inset' => 'true'}
+    - @collections.sort_by { |k| k.to_s }.each do |key|
+      %li= link_to key.to_s.gsub('_', ' ').titlecase, api_url_for(key), :'data-icon' => "arrow-r", :'data-ajax' => false
