--- a/server/views/blobs/new.html.haml
+++ b/server/views/blobs/new.html.haml
@@ -1,26 +1,26 @@
-%h1 New Blob
+=header "Create new blob"
 
-%form{ :action => bucket_url(@bucket_id), :method => :post, :enctype => 'multipart/form-data'}
-  %label
-    Blob Name:
-    %input{ :name => 'blob', :size => 512}/
-  %input{ :type => "hidden", :name => "meta_params", :value => "0"}
-  %a{ :href => "javascript:;", :onclick => "more_fields();"} Add Metadata
-  %div{ :id => "metadata_holder", :style => "display: none;"}
-    %label
-      Metadata Key:
-    %input{ :type => "text", :name => "meta_name", :value => ""}/
-    %label
-      Metadata Value:
-    %input{ :type => "text", :name => "meta_value", :value => ""}/
-  %br
-  %a{ :href => "javascript:;", :onclick => "less_fields();"} Less Metadata
-  %br
-  %br
-  %label
-    Blob Data:
-    %br
-    %input{ :type => "file", :name => 'blob_data', :size => 50}/
-    %br
-    %br
-  %input{ :type => :submit, :name => "commit", :value => "create"}/
+%div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
+  %form{ :action => bucket_url(@bucket_id), :method => :post, :enctype => 'multipart/form-data'}
+    %div{ 'data-role' => :fieldcontain }
+      %label
+        Blob Name:
+      %input{ :name => 'blob', :size => 512}/
+      %input{ :type => "hidden", :name => "meta_params", :value => "0"}
+    %a{ :href => "javascript:;", :onclick => "more_fields();"} Add Metadata
+    %div{ :id => "metadata_holder", :style => "display: none;", :'data-role' => :fieldcontain}
+      %div{ 'data-role' => :fieldcontain }
+        %label
+          Metadata Key:
+        %input{ :type => "text", :name => "meta_name", :value => ""}/
+      %div{ 'data-role' => :fieldcontain }
+        %label
+          Metadata Value:
+        %input{ :type => "text", :name => "meta_value", :value => ""}/
+    %a{ :href => "javascript:;", :onclick => "less_fields();"} Less Metadata
+    %div{ 'data-role' => :fieldcontain }
+      %label
+        Blob Data:
+      %input{ :type => "file", :name => 'blob_data', :size => 50}/
+
+    %input{ :type => :submit, :name => "commit", :value => "create"}/
