--- a/server/views/buckets/new.html.haml
+++ b/server/views/buckets/new.html.haml
@@ -1,13 +1,14 @@
-%h1 New Bucket
+=header "New bucket"
 
-%form{ :action => buckets_url, :method => :post }
-  %label
-    Bucket Name:
-    %input{ :name => 'name', :size => 250}/
-    %br
-  -if driver_has_bucket_location_feature?
-    %p
-      %label
-        Location: (optional)
-        %input{ :name => 'location', :size => 20 }/
-  %input{ :type => :submit, :name => "commit", :value => "create"}/
+%div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
+  %form{ :action => buckets_url, :method => :post }
+    %label
+      Bucket Name:
+      %input{ :name => 'name', :size => 250}/
+      %br
+    -if driver_has_bucket_location_feature?
+      %p
+        %label
+          Location: (optional)
+          %input{ :name => 'location', :size => 20 }/
+    %input{ :type => :submit, :name => "commit", :value => "create"}/
