--- a/server/views/addresses/associate.html.haml
+++ b/server/views/addresses/associate.html.haml
@@ -1,8 +1,12 @@
-%h1 Associate #{@address.id} to an instance
+=header "Associate to instance"
+=subheader @address.id
 
-%form{ :action => associate_address_url(@address.id), :method => :post, :class => :new_instance }
-  %select{:name => 'instance_id'}
-    %option
-    - @instances.each do |inst|
-      %option{ :value => inst.id } #{inst.id} - #{inst.name}
-    %input{ :type => :submit, :name => "commit", :value => "Associate" }/
+%div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
+  %form{ :action => associate_address_url(@address.id), :method => :post}
+    %div{ 'data-role' => :fieldcontain }
+      %label{ :for => :name} Instance:
+      %select{:name => 'instance_id'}
+        %option
+          - @instances.each do |inst|
+            %option{ :value => inst.id } #{inst.id} - #{inst.name}
+    %button{ :type => :submit} Associate
