--- a/server/views/addresses/index.html.haml
+++ b/server/views/addresses/index.html.haml
@@ -1,28 +1,15 @@
-%h1 Addresses
+=header "Addresses" do
+  %a{ :href => create_address_url, :'data-icon' => :plus, :'data-role' => :button, :class => 'ui-btn-right', :'data-ajax' => "false", :'method' => :post} Create new address
+=subheader "#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}"
 
-%table.display
-  %thead
-    %tr
-      %th ID
-      %th Instance
-      %th Actions
-  %tbody
+%div{ :'data-role' => :content, :'data-theme' => 'c'}
+  %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'a'}
+    %li{ :'data-role' => 'list-divider'}=driver_symbol
     - @elements.each do |address|
-      %tr
-        %td
-          = link_to address.id, address_url( address.id )
-        %td
-          - if address.instance_id
-            = link_to address.instance_id, instance_url( address.instance_id )
-        %td
-          - if driver.respond_to?(:destroy_address)
-            =link_to_action 'Destroy', destroy_address_url(address.id), :delete
-          - if driver.respond_to?(:associate_address) and not address.associated?
-            =link_to_action 'Associate', associate_address_url(address.id), :get
-          - if driver.respond_to?(:disassociate_address)
-            =link_to_action 'Disassociate', disassociate_address_url(address.id), :post
-  %tfoot
-    - if driver.respond_to?(:create_address)
-      %tr
-        %td{:colspan => 3, :style => "text-align:right;"}
-          =link_to_action "Create", create_address_url, :post
+      %li
+        %a{ :href => address_url(address.id), :'data-ajax' => 'false'}
+          %img{ :class => 'ui-link-thumb', :src => '/images/address.png'}
+          %h3=address.id
+          %span{ :class => 'ui-li-count'}=address.instance_id ? address.instance_id : 'Free'
+
+
