--- a/server/views/drivers/index.html.haml
+++ b/server/views/drivers/index.html.haml
@@ -1,15 +1,10 @@
-%h1
-  Available Drivers
+=header "Supported drivers"
+=subheader "Deltacloud API #{settings.version}"
 
-%table.display
-  %thead
-    %tr
-      %th ID
-      %th Name
-  %tbody
+%div{ :'data-role' => :content, :'data-theme' => 'c'}
+  %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'a'}
     - @drivers.each do |id, details|
-      %tr
-        %td{ :width => '20%' }
-          %tt
-            %a{ :href => driver_url(id) }= id
-        %td= details[:name]
+      %li
+        %a{ :href => driver_url(id), :'data-ajax' => 'false'}
+          %img{ :class => 'ui-link-thumb', :src => '/images/cloud.png'}
+          %h3=details[:name]
