--- a/server/views/images/show.html.haml
+++ b/server/views/images/show.html.haml
@@ -1,22 +1,27 @@
-%h1 Image
-%h2
-  = @image.id
+=header "Image"
+=subheader @image.id
 
-%dl
-  %di
-    %dt Name
-    %dd
-      = @image.name
-    %dt Owner
-    %dd
-      = link_to @image.owner_id, images_url + "?owner_id=#{@image.owner_id}"
-    %dt Architecture
-    %dd
-      = @image.architecture
-    %dt Description
-    %dd
-      = @image.description
-    %dt
-    %dd
-      = link_to 'Launch', api_url_for("instances/new?image_id=#{@image.id}")
-      = link_to_action 'Destroy', destroy_image_url(@image.id), :delete
+%div{ :'data-role' => :content, :'data-theme' => 'c'}
+  %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'd'}
+    %li{ :'data-role' => 'list-divider'} Name
+    %li
+      %p{ :'data-role' => 'fieldcontain'}=@image.name
+    %li{ :'data-role' => 'list-divider'} Description
+    %li
+      %p{ :'data-role' => 'fieldcontain'}=@image.description
+    %li{ :'data-role' => 'list-divider'} Owner
+    %li
+      %p{ :'data-role' => 'fieldcontain'}
+        %a{ :href => images_url + "?owner_id=#{@image.owner_id}"}
+          =@image.owner_id
+    %li{ :'data-role' => 'list-divider'} State
+    %li
+      %p{ :'data-role' => 'fieldcontain'}=@image.state
+    %li{ :'data-role' => 'list-divider'} Architecture
+    %li
+      %p{ :'data-role' => 'fieldcontain'}=@image.architecture
+    %li{ :'data-role' => 'list-divider'} Actions
+    %li
+      %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
+        %a{ :href => api_url_for("instances/new?image_id=#{@image.id}"), :'data-role' => "button", :'data-ajax' => 'false'} Launch
+        = link_to_action 'Destroy', destroy_image_url(@image.id), :delete
