--- a/server/views/instance_states/show.html.haml
+++ b/server/views/instance_states/show.html.haml
@@ -1,31 +1,27 @@
-%h1 Instance States
+=header "Instance state transitions"
+=subheader "#{driver_symbol}@#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}"
 
-%div#state_graph
+%div{ :'data-role' => :content, :'data-theme' => 'd', :class => 'middle-dialog'}
   = image_tag api_url_for('instance_states?format=png')
 
-%table.states
-  %thead
-    %tr
-      %th Origin
-      %th Action
-      %th Destination
-  %tbody
+  %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-theme' => 'a'}
     - @machine.states.each do |state|
-      %tr
-        %td.origin{:rowspan => "#{state.transitions.empty? ? 2 : (state.transitions.size + 1)}"}
-          = state
+      %li{ :'data-role' => 'list-divider', :'class' => 'ui-bar-a', :'data-theme' => 'a'}=state
       - if state.transitions.empty?
-        %tr
-          %td --
-          %td --
+        %li{ :'data-role' => 'list-divider'} Action
+        %li
+          %p{ :'data-role' => 'fieldcontain'}="---"
+        %li{ :'data-role' => 'list-divider'} Destination
+        %li
+          %p{ :'data-role' => 'fieldcontain'}="---"
       - else
+        %li{ :'data-role' => 'list-divider'} Action
         - state.transitions.each do |transition|
-          %tr
-            %td
-              - if transition.automatically?
-                %em auto
-              - else
-                = transition.action
-            %td
-              = transition.destination
-
+          %li
+            - if transition.automatically?
+              %p{ :'data-role' => 'fieldcontain'} auto
+            - else
+              %p{ :'data-role' => 'fieldcontain'}=transition.action
+          %li{ :'data-role' => 'list-divider'} Destination
+          %li
+            %p{ :'data-role' => 'fieldcontain'}=transition.destination
