--- a/server/views/instances/index.html.haml
+++ b/server/views/instances/index.html.haml
@@ -1,32 +1,15 @@
-%h1 Instances
+=header "Instances"
+=subheader "#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}"
 
-%table.display
-  %thead
-    %tr
-      %th ID
-      %th Owner
-      %th Name
-      %th Image
-      %th Profile
-      %th State
-      %th Actions
-  %tbody
+%div{ :'data-role' => :content, :'data-theme' => 'c'}
+  %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'a'}
+    %li{ :'data-role' => 'list-divider'}=driver_symbol
     - @instances.each do |instance|
-      %tr
-        %td
-          = link_to truncate_words(instance.id), instance_url( instance.id )
-        %td
-          = link_to instance.owner_id, instances_url + "?owner_id=#{instance.owner_id}"
-        %td
-          = instance.name
-        %td
-          = link_to truncate_words(instance.image_id), image_url( instance.image_id )
-        %td
-          = instance.hardware_profile ? link_to(instance.hardware_profile, hardware_profile_url( instance.instance_profile.id )) : 'default'
-        %td
-          = image_for_state(instance.state)
-        %td
-          -instance.actions.each do |action|
-            =link_to_action action, self.send(:"#{action}_instance_url", instance.id), instance_action_method(action)
-          - if driver.respond_to?(:run_on_instance) and instance.state=="RUNNING"
-            =link_to_action "Run command", api_url_for("instances/#{instance.id}/run"), :get
+      %li
+        %a{ :href => instance_url(instance.id), :'data-ajax' => 'false'}
+          %img{ :class => 'ui-link-thumb', :src => '/images/machine.png'}
+          %h3=truncate_words(instance.id)
+          %p
+            %strong=instance.name
+          %p=[instance.owner_id, instance.image_id, instance.hardware_profile].join(', ')
+          %span{ :class => 'ui-li-count'}=instance.state
